--- a/index.html
+++ b/index.html
@@ -433,7 +433,8 @@ function showDivs(n) {
 
 		<div class="boxforSec"style="height:35%;text-align:center;">
 			
-			<p style="font-family:Stencil Std, fantasy; background-color:#2A2A2A; font-size:40px;color:white;margin-right:;padding:20px"> MOTIVATED<br>TO<br>COMPUTER<br>SCIENCE</p>
+			<p style="font-family:Stencil Std, fantasy; background-color:#2A2A2A; font-size:40px;color:white;margin-right:;padding:20px"> MY SECOND<br>JOURNEY<br>HAS<br>BEGUN</p>
+
 
 
 		</div>
